# minEA

./: .env.example  .gitignore  README.md  package-lock.json  package.json  page.html  turbo.json
apps/api/: .env.example  .vercelignore  CLOUD_SQL.md  alembic.ini  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  vercel.json
apps/api/alembic/: env.py
apps/api/app/: auth.py  config.py  database.py  main.py
apps/api/migrations/: 001_initial.sql  002_auth_tenancy.sql  003_firebase_auth.sql  004_roles_permissions_limits.sql  005_views_graph.sql  006_process_builder.sql  007_stage_duration.sql  008_stage_transitions.sql  009_process_canvas_layout.sql  010_process_graph_edges.sql  011_journey_builder.sql  012_capability_domains.sql  013_people_layer.sql  014_data_layer.sql  015_people_accountability_verbs.sql  016_people_data_layer_entities.sql  017_product_graph_layout.sql  018_workspace_snapshots.sql  019_product_history.sql  020_objects_updated_by.sql  021_backfill_updated_by.sql  022_role_descriptions.sql  023_share_links.sql  024_share_free_testing.sql  025_share_all_roles.sql  026_plans_free_solo_team.sql  027_free_plan_single_user.sql  028_stripe_billing.sql  029_workspace_plan_limits.sql  030_free_share_limit.sql  031_plans_free_business.sql  032_contact_inquiries.sql  033_object_ownership.sql  034_backfill_owner_accountabilities.sql  035_people_contacts.sql  036_system_data_store_access.sql  037_data_domain_belongs_to.sql  038_system_belongs_to_data_domain.sql  039_entity_owns_backfill.sql  040_system_category_split.sql  (+2 more)
infra/: init.sql  (+1 more)
(+507 files in other folders)
