[project]
name = "minea-api"
version = "0.0.1"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.115.6",
  "sqlalchemy[asyncio]==2.0.36",
  "asyncpg==0.30.0",
  "pydantic==2.10.3",
  "pydantic-settings==2.7.0",
  "python-multipart==0.0.20",
  "google-genai>=1.0.0",
  "httpx==0.28.1",
  "firebase-admin==6.6.0",
  "resend==2.5.1",
  "stripe==11.4.1",
  "python-dotenv==1.0.1",
  "aiofiles==24.1.0",
]

[project.optional-dependencies]
dev = [
  "uvicorn[standard]==0.32.1",
  "alembic==1.14.0",
  "psycopg2-binary==2.9.10",
]

[tool.vercel]
entrypoint = "app.main:app"

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
